Add more streams

--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "chance": "^1.0.18",
     "mkdirp": "^0.5.1"
+  },
+  "dependencies": {
+    "from2-array": "^0.0.4",
+    "request": "^2.88.0",
+    "split": "^1.0.1",
+    "through2": "^3.0.1"
   }
 }
