--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "combine": "^0.1.4",
     "crypto": "^1.0.1",
     "from2-array": "^0.0.4",
+    "ini": "^1.3.5",
     "multipipe": "^3.0.1",
+    "object-path": "^0.11.4",
     "request": "^2.88.0",
     "split": "^1.0.1",
     "stampit": "^4.2.0",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "zeromq": "^5.2.0"
   }
 }
