--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "combine": "^0.1.4",
+    "consul": "^0.36.0",
     "crypto": "^1.0.1",
+    "forever": "^1.0.0",
     "from2-array": "^0.0.4",
+    "http-proxy": "^1.18.0",
     "ini": "^1.3.5",
     "multipipe": "^3.0.1",
     "object-path": "^0.11.4",
+    "portfinder": "^1.0.25",
     "request": "^2.88.0",
     "split": "^1.0.1",
     "stampit": "^4.2.0",
     "through2": "^3.0.1",
     "zeromq": "^5.2.0"
+  },
+  "scripts": {
+    "consul": "consul agent -dev"
   }
 }
