--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
     "mkdirp": "^0.5.1"
   },
   "dependencies": {
+    "JSONStream": "^1.3.5",
+    "amqplib": "^0.5.5",
     "child_process": "^1.0.2",
     "combine": "^0.1.4",
     "consul": "^0.36.0",
     "crypto": "^1.0.1",
+    "ecstatic": "^4.1.2",
     "forever": "^1.0.0",
     "from2-array": "^0.0.4",
     "http-proxy": "^1.18.0",
     "ini": "^1.3.5",
+    "level": "^6.0.0",
+    "minimist": "^1.2.0",
+    "monotonic-timestamp": "^0.0.9",
     "multipipe": "^3.0.1",
     "object-path": "^0.11.4",
     "portfinder": "^1.0.25",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "split": "^1.0.1",
     "stampit": "^4.2.0",
     "through2": "^3.0.1",
+    "variations-stream": "^0.1.3",
+    "ws": "^7.2.0",
     "zeromq": "^5.2.0"
   },
   "scripts": {
